--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <img src="/assets/images/js-memory-game-itvdn/vue.svg" alt="vue" class="front-face">
             <img src="/assets/images/js-memory-game-itvdn/js-badge.svg" alt="js-badge" class="back-face"></div>
     </section>
+    <button class="reset">Reset</button>
 </div>
 
     <script src="/js/index.js"></script>
